# OFFS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docker/: Dockerfile.metrics  Dockerfile.relay
docs/superpowers/plans/: 2026-05-28-offs-project-plan.md
docs/superpowers/specs/: 2026-05-28-offs-project-design.md
packaging/linux/debian/: control
packaging/linux/rpm/: offs.spec
packaging/macos/: offs.icns  postinstall
packaging/relay/linux/debian/: control
packaging/relay/linux/rpm/: offs-relay.spec
packaging/relay/macos/: postinstall
packaging/relay/windows/: offs-relay.wxs
packaging/windows/: offs.wxs
scripts/: msvc_build.bat  msvc_build_testoffs.bat  msvc_configure.bat  release.sh
src/Service/: service.h  service_linux.c  service_macos.c  service_windows.c
src/Updater/: updater_main.c
src/offs/: cli_util.c  cli_util.h  client.c  client.h  main.c
src/offs-metrics/: metrics_server.c
src/offs/commands/: block.c  config.c  friend.c  get.c  health.c  peer.c  put.c  start_stop.c  status.c  stubs.c
src/offs/l10n/: en.h
src/offsd/: main.c
test/: CMakeLists.txt  test_cli.cpp  test_cli_stubs.c  test_client.cpp  test_main.cpp  test_offsd_integration.cpp
